<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Amount</string>
    <string name="custom_tip_percentage">Custom%</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_persent">18%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="number">Number</string>
    <string name="numberOfPeople">Number</string>
    <string name="amountPerPerson">Amount/Person</string>
    <string name="tax">Tax</string>

</resources>
