<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="5"
    android:useDefaultMargins="true"
    tools:context="com.deitel.tipcalculator.MainActivity" >

    <TextView
        android:id="@+id/amountTextView"
        android:layout_gravity="right"
        android:labelFor="@+id/amountEditText"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="6" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/amountDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left|fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_gravity="right"
        android:text="@string/custom_tip_percentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/customTipSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="30"
        android:progress="18" />

    <LinearLayout
        android:id="@+id/persentLinearLayout"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2" >

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/fifteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/eighteen_persent"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="3"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_column="0"
        android:layout_gravity="top|right"
        android:layout_row="4"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/total15TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/noOfPeopletextView"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
       
        android:labelFor="@+id/noOfPeopleEditText"
        android:text="@string/numberOfPeople"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <GridLayout
        android:layout_gravity="fill_horizontal"
        android:layout_row="2" >

        <EditText
            android:id="@+id/noOfPeopleEditText"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:inputType="number" />

    </GridLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:text="@string/amountPerPerson"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <GridLayout android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/amountPerPerson15TextView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@android:color/holo_orange_light"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/amountCustomAmounttextView"
            android:layout_width="110dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:background="@android:color/holo_orange_light"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </GridLayout>

<CheckBox
    android:id="@+id/tax"
    android:layout_column="1"
    android:layout_gravity="left|center_vertical"
    android:text="@string/tax" />

</GridLayout>
